2002-02-09  Mark McLoughlin  <mark@skynet.ie>

	* GNOME_FishApplet_Factory.server.in: move to Vertigo namespace.

	* fish.c: update for factory macro change.

Wed Feb 06 09:59:57 2002  George Lebl <jirka@5z.com>

	* fish.c: get the initial values for size and orient instead of
	  using defaults.

2002-01-31  Mark McLoughlin  <mark@skynet.ie>

	* fish.c: (display_about_dialog):
	initialise error. [fixes #69728]

	* fish_applet.desktop: remove

2002-01-30  Mark McLoughlin  <mark@skynet.ie>

	* Makefile.am: update for AM_GCONF_SOURCE_2.

2002-01-14  Glynn Foster  <glynn.foster@sun.com>

	* Makefile.am: Add schemas file to EXTRA_DIST

2001-12-20  Mark McLoughlin  <mark@skynet.ie>

	* fish.c: Impl preferences handling. Kill off the fish config
	struct and just use gconf.

	* fish.schemas: new.

	* Makefile.am: add fish.schemas.

2001-12-17  Mark McLoughlin  <mark@skynet.ie>

	* fish.c: (apply_cb), (fish_applet_fill), (fishy_factory):
	update for panel-applet api changes.

2001-12-14  Mark McLoughlin  <mark@skynet.ie>

	* fish.c: (fish_applet_new): update for panel-applet
	  GNOME_Vertigo namespace changes.

2001-11-30  Mark McLoughlin  <mark@skynet.ie>

	* fish.c: (fish_applet_new): update for applet
	api changes.

2001-11-27  Mark McLoughlin  <mark@skynet.ie>

	* Makefile.am: remove empty SUBDIRS.

2001-11-27  Mark McLoughlin  <mark@skynet.ie>

	* Makefile.am: build against ../../libpanel-applet.

2001-11-23  Mark McLoughlin  <mark@skynet.ie>

	* GNOME_FishApplet_Factory.server.in: add "panel:icon" and
	"panel:category" attributes.

	* fish.c: (create_fish_widget): remove unused style.

2001-11-21  Mark McLoughlin  <mark@skynet.ie>

	Port to new applets api.

	* fish.c:
	(load_image_file): use GError with gdk_pixbuf.
	(load_properties): #ifdef FIXME out all the gnome_config 
	stuff for now.
	(phelp_cb): #ifdef FIXME out for now - need to use new 
	help api.
	(display_properties_dialog): rename from propeties_dialog.