@@ -8,8 +8,8 @@
 		<item value="IDL:Bonobo/GenericFactory:1.0"/>
 		<item value="IDL:Bonobo/Unknown:1.0"/>
 	</oaf_attribute>
-	<oaf_attribute name="name" type="string" value="Wanda Factory"/>
-	<oaf_attribute name="description" type="string" value="From Whence That Stupid Fish Came"/>
+	<oaf_attribute name="name" type="string" _value="Wanda Factory"/>
+	<oaf_attribute name="description" type="string" _value="From Whence That Stupid Fish Came"/>
 
 </oaf_server>
 
@@ -22,8 +22,8 @@
 		<item value="IDL:Bonobo/Control:1.0"/>
 		<item value="IDL:Bonobo/Unknown:1.0"/>
 	</oaf_attribute>
-	<oaf_attribute name="name" type="string" value="Wanda"/>
-	<oaf_attribute name="description" type="string" value="That Stupid Fish"/>
+	<oaf_attribute name="name" type="string" _value="Wanda"/>
+	<oaf_attribute name="description" type="string" _value="That Stupid Fish"/>
 	<oaf_attribute name="panel:category" type="string" value="Amusements"/>
 	<oaf_attribute name="panel:icon" type="string" value="gnome-fish.png"/>
 
