@@ -1,3 +1,7 @@
+2002-02-12  Kjartan Maraas  <kmaraas@gnome.org>
+
+	* GNOME_FishApplet_Factory.server.in: Mark strings for l10n.
+	
 2002-02-09  Mark McLoughlin  <mark@skynet.ie>
 
 	* GNOME_FishApplet_Factory.server.in: move to Vertigo namespace.
